fixed overflowing outline of sale items, fixed deprecation error in moment.js that was polluting console, changed additional service radio btns controls (check next / prev) so they depend on focused radio instead of selected one

--- a/client/src/components/styles/DeviceRightDescSaleItem.css
+++ b/client/src/components/styles/DeviceRightDescSaleItem.css
@@ -40,6 +40,7 @@
 
 .device-right-desc-sale-link-date-wrap > a {
   font-size: 1.5rem;
+  margin: 2px 2px 0 0;
   max-height: 57px;
   overflow: hidden;
 }
